# order-management-system

./: cargo.toml
docker/: docker-compose.yml
order-management/: Cargo.toml
order-management/src/: lib.rs
order-producer/: Cargo.toml  README.md
order-producer/src/: connection.rs  main.rs  models.rs  producer.rs  securities.rs  serializer.rs
order-producer/src/utils/: args_parser.rs  data_factory.rs  mod.rs  serializer_factory.rs
