[package]
name = "order-producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
rskafka = "0.5.0"
rmp = "^0.8"
rmp-serde = "1.1.1"
tokio = { version = "1.36.0", features = ["full"] }
log = "0.4.21"
env_logger = "0.11.2"

[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",             # Enable serialization/deserialization with Serde
]
